# salai-spk-diar

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: paths.yaml
data/atc0r/stm/: dca_d1_1.stm  dca_d1_2.stm  dca_d1_3.stm  dca_d1_4.stm  dca_d2_1.stm  dca_d2_2.stm  dca_f1_1.stm  dca_f1_2.stm  dca_f2_1.stm  dca_f2_2.stm  dca_f2_3.stm  dfw_a1_1.stm  dfw_d1_1.stm  log_id_1.stm  log_id_2.stm  log_id_3.stm
docs/: 01a_voice_fingerprint_and_speaker_embedding.md  01b_sortformer_architecture.md  01c_ls_eend_architecture.md  01d_conformer_architecture.md  02_literature_survey_report.md  03_complete_explanation_guide.md  phase2_experiment_log.md
old_plotting_scripts/: generate_plot_grid.py  generate_plot_grid_time_shift.py  generate_plot_grid_vad.py
scripts/: run_dca_d2_2_analysis.sh  run_phase2.sh  setup.sh
src/spkdiar/: __init__.py
src/spkdiar/analysis/: attention_entropy.py  entropy_vs_cer.py  gen_fig1_der_comparison.py  gen_fig2_finetune_timeline.py  gen_fig2_paired_waterfall.py  gen_fig3_embeddings.py  gen_fig4_attention_entropy_v2.py  gen_fig4_entropy.py  ieee_style.py  plot_timeline.py  plot_waterfall.py  role_cer_analysis.py  speaker_embeddings.py
src/spkdiar/data/: __init__.py  make_finetune_manifest.py  make_manifest.py  make_rttm.py  prep_all.py  stm_parser.py
src/spkdiar/inference/: run_lseend.py  run_pyannote.py  run_sortformer.py  run_streaming.py
src/spkdiar/training/: finetune_sortformer.py
